--- a/M01S02/ex02/index.html
+++ b/M01S02/ex02/index.html
@@ -21,7 +21,9 @@
 
 
 
-
+  <script>
+    console.log("Ne-am apucat sa invatam JavaScript la Pixellab.");
+  </script>
   <div
     class="pixeltab-host"
     id="js01-02-02"
