--- a/M01S01/ex02/index.html
+++ b/M01S01/ex02/index.html
@@ -19,9 +19,44 @@
 
 <body>
 
+  <form action="">
+    <fieldset>
+      <legend>Calculator suprafata dreptunghi</legend>
+      <label for="length">Lungime: </label>
+      <input
+        type="text"
+        name="length"
+        id="length"
+        placeholder="Lungime"
+      >
+
+      <br> <br>
+
+      <label for="width">Latime: </label>
+      <input
+        type="text"
+        name="width"
+        id="width"
+        placeholder="Latime"
+      >
+
+      <br> <br>
+
+      <button
+        type="submit"
+        title="Calculeaza"
+      >Calculeaza</button>
+      <p>
+        Rezultat: <span id="result">
+
+        </span>
+      </p>
+    </fieldset>
+  </form>
 
 
-  <script src="app.js"></script>
+
+  <script src="./app.js"></script>
 
   <div
     class="pixeltab-host"
