--- a/M01S02/ex01/index.html
+++ b/M01S02/ex01/index.html
@@ -20,8 +20,10 @@
 <body>
 
 
-
-
+  <script src="./utils.js"></script>
+  <script src="js/utils.js"></script>
+  <script src="js/vendor.js"></script>
+  <script src="./app.js"></script>
   <div
     class="pixeltab-host"
     id="js01-02-01"
