--- a/M01S01/ex03/index.html
+++ b/M01S01/ex03/index.html
@@ -19,7 +19,33 @@
 
 <body>
 
-
+  <form action="">
+    <label for="length">Length</label>
+    <input
+      type="text"
+      name="length"
+      id="length"
+    > <br> <br>
+    <label for="width">Width</label>
+    <input
+      type="text"
+      name="width"
+      id="width"
+    > <br> <br>
+    <label for="height">Height</label>
+    <input
+      type="text"
+      name="height"
+      id="height"
+    > <br> <br>
+    <label for="result">Result</label>
+    <input
+      type="text"
+      name="result"
+      id="result"
+    > <br> <br>
+    <button type="submit">calculeaza</button>
+  </form>
 
   <script src="app.js"></script>
 
