--- a/M01S01/ex04/index.html
+++ b/M01S01/ex04/index.html
@@ -19,7 +19,21 @@
 
 <body>
 
-
+  <form action="">
+    <label for="radius">Radius</label>
+    <input
+      type="text"
+      name="radius"
+      id="radius"
+    > <br> <br>
+    <label for="result">Result</label>
+    <input
+      type="text"
+      name="result"
+      id="result"
+    ><br> <br>
+    <button type="submit">Calculate</button>
+  </form>
 
   <script src="app.js"></script>
 
