--- a/M01S03/ex01/index.html
+++ b/M01S03/ex01/index.html
@@ -21,10 +21,19 @@
 
   <script>
     var object = {
-      name: 'Dragos',
-      surname: 'Iordache',
-      age: 32
+      name: 'Sorin',
+      surname: 'Truica',
+      age: 26,
+      petOwner: true,
+      carOwner: true
     };
+    console.log(object.name);
+    console.log(object.age.toString());
+    console.log((2021 - object.age).toString());
+    console.log(object.name + " s-a nascut in " + (2021 - object.age) + ".");
+    console.log(object.name + " " + object.surname + " are " + object.age + " ani.")
+    console.log("Ma numesc " + object.name + " " + object.surname + " si am " + object.age + " ani.");
+    console.log(object.name + " s-a nascut in " + `${2021 - object.age}`);
 
   </script>
 
