--- a/M01S04/ex03/index.html
+++ b/M01S04/ex03/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8" />
-    <title>Switch</title>
+  <meta charset="utf-8" />
+  <title>Switch</title>
 </head>
+
 <body>
 
-    <!-- insert script tag here -->
+  <!-- insert script tag here -->
+  <script src="./app.js"></script>
 </body>
+
 </html>
