--- a/M01S01/ex03/index.html
+++ b/M01S01/ex03/index.html
@@ -38,12 +38,9 @@
       name="height"
       id="height"
     > <br> <br>
-    <label for="result">Result</label>
-    <input
-      type="text"
-      name="result"
-      id="result"
-    > <br> <br>
+    <p>
+      Rezultat: <span id="result"></span>
+    </p> <br> <br>
     <button type="submit">calculeaza</button>
   </form>
 
