--- a/M01S01/ex06/index.html
+++ b/M01S01/ex06/index.html
@@ -26,12 +26,9 @@
       name="radius"
       id="radius"
     > <br> <br>
-    <label for="result">Result</label>
-    <input
-      type="text"
-      name="result"
-      id="result"
-    ><br> <br>
+    <p>
+      Rezultat: <span id="result"></span>
+    </p>
     <button type="submit">Calculate</button>
   </form>
 
