--- a/M01S04/ex07/index.html
+++ b/M01S04/ex07/index.html
@@ -9,14 +9,13 @@
     rel="stylesheet"
     href="https://pixellab.ro/js/pixeltab/static/js/pixeltab.css"
   >
-
   <script src="https://pixellab.ro/js/pixeltab/static/js/pixeltab-top.js"></script>
 </head>
 
 <body>
 
   <!-- insert script tag here -->
-
+  <script src="./app.js"></script>
   <div
     class="pixeltab-host"
     id="js01-04-07"
