--- a/M01S04/ex11/index.html
+++ b/M01S04/ex11/index.html
@@ -16,7 +16,7 @@
 <body>
 
   <!-- insert script tag here -->
-
+  <script src="./app.js"></script>
   <div
     class="pixeltab-host"
     id="js01-04-11"
