--- a/M01S05/ex02/index.html
+++ b/M01S05/ex02/index.html
@@ -9,7 +9,7 @@
     rel="stylesheet"
     href="https://pixellab.ro/js/pixeltab/static/js/pixeltab.css"
   >
-
+  <script src="./app.js"></script>
   <script src="https://pixellab.ro/js/pixeltab/static/js/pixeltab-top.js"></script>
 </head>
 
