--- a/M01S04/ex09/index.html
+++ b/M01S04/ex09/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <title>Do While</title>
-</head>
-<body>
 
-    <!-- insert script tag here -->
+<head>
+  <meta charset="utf-8" />
+  <title>Do While</title>
+</head>
+
+<body>
+  <script src="./app.js"></script>
+  <!-- insert script tag here -->
 </body>
+
 </html>
