--- a/M01S05/ex08/index.html
+++ b/M01S05/ex08/index.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <title>Anonymous Functions</title>
-</head>
-<body>
 
+<head>
+  <meta charset="utf-8" />
+  <title>Anonymous Functions</title>
+</head>
+
+<body>
+  <button
+    id="clicker"
+    type="button"
+    title="Click"
+  >Click</button>
+  <button
+    id="remove-event"
+    type="button"
+    title="Elimina eventul"
+  ></button>
+  <button
+    id="query"
+    type="button"
+    title="Query"
+  >Query</button>
+
+  <p id="message"></p>
+  <script src="./app.js"></script>
 </body>
+
 </html>
