--- a/M01S06/ex03/index.html
+++ b/M01S06/ex03/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8" />
-    <title>User Agent</title>
-    <script src="app.js"></script>
+  <meta charset="utf-8" />
+  <title>User Agent</title>
 </head>
+
 <body>
-  
+
   <button>Click Me</button>
+  <script src="./app.js"></script>
 </body>
+
 </html>
