--- a/M02S02/ex01/index.html
+++ b/M02S02/ex01/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8">
-    <title>Intro to jQuery</title>        
-    <style>
-      .error {
-        color: red;
-      }
-    </style>
+  <meta charset="utf-8">
+  <title>Intro to jQuery</title>
+  <style>
+    .error {
+      color: red;
+    }
+  </style>
 </head>
+
 <body>
+  <div class="container">
+
+  </div>
 
   <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="app.js"></script>
 </body>
+
 </html>
