--- a/M02S03/ex09b/index.html
+++ b/M02S03/ex09b/index.html
@@ -11,13 +11,7 @@
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   >
-  <title>Document</title>
-
-  <style>
-    .d-none {
-      display: none;
-    }
-  </style>
+  <title>Match Media</title>
 </head>
 
 <body>
@@ -34,7 +28,6 @@
   <ul>
     <li><a href="">link1</a></li>
     <li><a href="">link2</a></li>
-    <li><a href="">link3</a></li>
     <li><a href="">link4</a></li>
     <li><a href="">link5</a></li>
   </ul>
@@ -44,6 +37,7 @@
     <li><a href="">link1</a></li>
     <li><a href="">link5</a></li>
   </ul>
+
   <script src="app.js"></script>
 </body>
 
