--- a/M02S03/ex08/index.html
+++ b/M02S03/ex08/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
-  <title>jQuery events</title>        
-  <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script src="app.js"></script>
+  <title>jQuery events</title>
+  <script
+    src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+    integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
+    crossorigin="anonymous"
+  ></script>
+  <script src="./app.js"></script>
 </head>
+<style>
+  body {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .stage {
+    width: 300px;
+    height: 300px;
+    border: 1px solid #000;
+  }
+</style>
+
 <body>
 
   <div class="stage">
@@ -13,4 +34,5 @@
 
   </div>
 </body>
+
 </html>
