--- a/M02S04/ex01/index.html
+++ b/M02S04/ex01/index.html
@@ -22,6 +22,16 @@
 
   <div class="box"></div>
 
+  <button
+    type="button"
+    title="Aplica"
+  >Aplica</button>
+
+  <button
+    type="button"
+    title="Intuneca"
+  >Intuneca</button>
+
   <script src="app.js"></script>
 </body>
 
