--- a/M02S04/ex02/index.html
+++ b/M02S04/ex02/index.html
@@ -1,22 +1,63 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8" />
-    <title>CSS animation in JavaScript</title>    
-    <style>
-      .box {
-        width: 100px;
-        height: 100px; 
-        border: 1px solid #000;
-        transition: background-color 1s ease;
-      }
-
-    </style>
+  <meta charset="utf-8" />
+  <title>CSS animation in JavaScript</title>
+  <style>
+    .box {
+      width: 100px;
+      height: 100px;
+      border: 1px solid #000;
+      transition: background-color 1s ease;
+    }
+  </style>
 </head>
-<body>
-  
-  <div class="box"></div>
 
+<body>
+
+  <div class="box">
+    <input
+      type="radio"
+      name="radioGroup"
+      id="box1"
+    >
+  </div>
+  <div class="box-controls">
+    <button
+      title=""
+      type="button"
+      style="background-color: red;"
+    >Set</button>
+    <button
+      title=""
+      type="button"
+      style="background-color: green;"
+    >Set</button>
+    <button
+      title=""
+      type="button"
+      style="background-color: blue;"
+    >Set</button>
+    <br> <br>
+    <label for="dynamicColor">Color</label>
+    <input
+      type="color"
+      name="dynamicColor"
+      id="dynamicColor"
+    >
+    <button
+      title="Dynamic"
+      type="button"
+    >Dynamic Color Button</button>
+  </div>
+  <div>
+    <button
+      type="button"
+      class="reset"
+    >Reset</button>
+  </div>
   <script src="app.js"></script>
 </body>
+
 </html>
