--- a/M02S04/ex03/index.html
+++ b/M02S04/ex03/index.html
@@ -42,7 +42,9 @@
       height: 45px;
       background-color: #000;
       position: absolute;
-      transition: left .3s linear;
+      transform: translateZ(0);
+      will-change: transform;
+      transition: left .3s linear, transform .3s linear;
     }
   </style>
 </head>
@@ -72,7 +74,8 @@
     </div>
   </div>
 
-  <script src="app.js"></script>
+  <!-- <script src="app.js"></script> -->
+  <script src="app-tr.js"></script>
 </body>
 
 </html>
