--- a/M02S05/ex02/index.html
+++ b/M02S05/ex02/index.html
@@ -1,4 +1,3 @@
-d
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,7 +11,8 @@ d
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   >
-  <title>JqueryCarousel</title>
+  <title>jQuery Carousel</title>
+
   <link
     rel="stylesheet"
     href="node_modules/slick-carousel/slick/slick.css"
@@ -23,48 +23,38 @@ d
   >
   <link
     rel="stylesheet"
-    href="style.css"
+    href="css/style.css"
   >
 </head>
 
 <body>
+
   <div class="home-carousel">
     <div>
-      <img
-        src="images/image01.jpg"
-        alt=""
-      >
+      <img src="images/image01.jpg">
     </div>
+
     <div>
-      <img
-        src="images/image02.jpg"
-        alt=""
-      >
+      <img src="images/image02.jpg">
     </div>
+
     <div>
-      <img
-        src="images/image03.jpg"
-        alt=""
-      >
+      <img src="images/image03.jpg">
     </div>
+
     <div>
-      <img
-        src="images/image04.jpg"
-        alt=""
-      >
+      <img src="images/image04.jpg">
     </div>
+
     <div>
-      <img
-        src="images/image05.jpg"
-        alt=""
-      >
+      <img src="images/image05.jpg">
     </div>
   </div>
 
-  <script src="
-        node_modules/jquery/dist/jquery.js"></script>
+  <script src="node_modules/jquery/dist/jquery.js"></script>
   <script src="node_modules/slick-carousel/slick/slick.js"></script>
-  <script src="./app.js"></script>
+
+  <script src="app.js"></script>
 </body>
 
 </html>
